wordpress-deployment.yaml
apiVersion: v1
kind: Service
metadata:
    name: wordpress
    labels:
        app: wordpress
spec:
    ports:
        - port: 80
    selector:
        app: wordpress
        tier: frontend
    type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: wordpress
    labels:
        app: wordpress
spec:
    selector:
        matchLabels:
            app: wordpress
            tier: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: wordpress
                tier: frontend
        spec:
            containers:
                - image: wordpress:6.2.1-apache
                  name: wordpress
                  ports:
                      - containerPort: 80
                        name: wordpress
                  volumeMounts:
                      - name: wordpress-persistent-storage
                        mountPath: /var/www/html
            volumes:
                - name: wordpress-persistent-storage
                  persistentVolumeClaim:
                      claimName: wp-pv-claim
